[package]
name = "placebo"
version = "0.1.0"
authors = ["Ilya Filtsin <ilfiltsin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-array = { version = "0.14.1", optional = true}
serde = { version = "1.0", optional = true, features = ["derive"]}

[features]
default = ["serde"]
